clusters/homelab/apps/excalidash/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: excalidash
  namespace: excalidash
spec:
  parentRefs:
    - name: services
      namespace: infra
      sectionName: main
  hostnames: [
    "draw.klimlive.de"
  ]
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: excalidash-frontend
          port: 80
